fixed connect icons on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ p {
 		width: 100%;
 	}
 	.icon-col {
-		width: 16.67%;
+		width: 65px;
 	}
 	.photo-col {
 		width: 33.33%;
